--- a/.github/workflows/main_initech.yml
+++ b/.github/workflows/main_initech.yml
@@ -32,6 +32,7 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
+        npm run lint --if-present
         popd
 
     - name: 'Run Azure Functions Action'
